# tinyagent

./: .gitignore  README.md  pyproject.toml
agentctl/: __init__.py  cli.py
agentd/: __init__.py  contracts.py  events.py  kernel.py  models.py  output.py  state.py
design/: guideline.md
docs/: CODE_REVIEW_REPORT.md  MERGE.md  PHILOSOPHY.md  PY_SOURCE_EXPORT.md  README.md
profiles/apex-coder/: system.md
scripts/: export_py_markdown.py
tests/: test_cli.py  test_kernel.py  test_models.py  test_scaffold.py
