[project]
name = "tinyagent"
version = "0.1.0"
description = "Minimal general-purpose agent harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agentctl = "agentctl.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentd", "agentctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
